docs/v5/ROUTE_MAP.md
# OpsAcademy V5 Route Map

**Page routes:** 110  
**API handlers:** 45

## Public

- `/about`
- `/assessment/[slug]`
- `/careers`
- `/certifications`
- `/certifications/verify`
- `/community`
- `/contact`
- `/course/[slug]`
- `/courses`
- `/credential/[id]`
- `/experts`
- `/for-companies`
- `/glossary/[term]`
- `/invite/[token]`
- `/knowledge/[slug]`
- `/knowledge`
- `/learn/[slug]`
- `/learning-paths/[slug]`
- `/learning-paths`
- `/login`
- `/`
- `/pricing`
- `/resources`
- `/skills-assessment`

## Learner

- `/dashboard/assignments`
- `/dashboard/career`
- `/dashboard/certificates`
- `/dashboard/community`
- `/dashboard/courses`
- `/dashboard/goals`
- `/dashboard/learning-paths`
- `/dashboard/notes`
- `/dashboard/notifications`
- `/dashboard/onboarding`
- `/dashboard`
- `/dashboard/profile`
- `/dashboard/resources`
- `/dashboard/settings`
- `/dashboard/skills`
- `/dashboard/transcript`
- `/dashboard/tutor`

## Company

- `/company/academy/[id]`
- `/company/academy`
- `/company/assignments`
- `/company/billing`
- `/company/certificates`
- `/company/employees`
- `/company/imports`
- `/company/integrations`
- `/company/onboarding`
- `/company`
- `/company/reports`
- `/company/settings`
- `/company/skills`
- `/company/sso`
- `/company/teams`
- `/company-academy`

## Owner Admin

- `/admin/activity`
- `/admin/analytics`
- `/admin/announcements`
- `/admin/api-keys`
- `/admin/assessments/[id]`
- `/admin/assessments`
- `/admin/audit`
- `/admin/backups`
- `/admin/branding`
- `/admin/certificates`
- `/admin/community`
- `/admin/companies/[id]`
- `/admin/companies`
- `/admin/company-academies`
- `/admin/competencies`
- `/admin/courses/[slug]`
- `/admin/courses`
- `/admin/credential-templates`
- `/admin/email`
- `/admin/enterprise`
- `/admin/features`
- `/admin/imports`
- `/admin/instructors`
- `/admin/integrations`
- `/admin/jobs`
- `/admin/knowledge`
- `/admin/learners`
- `/admin/learning-paths`
- `/admin/localization`
- `/admin/media`
- `/admin/onboarding`
- `/admin`
- `/admin/pages`
- `/admin/plans`
- `/admin/resources`
- `/admin/revenue`
- `/admin/reviews`
- `/admin/roles`
- `/admin/seo`
- `/admin/settings`
- `/admin/support`
- `/admin/system`
- `/admin/webhooks`

## Legacy/Other

- `/cms/certificates`
- `/cms/company-content`
- `/cms/courses/[slug]`
- `/cms/courses`
- `/cms/knowledge`
- `/cms/learning-paths`
- `/cms`
- `/cms/resources`
- `/cms/settings`
- `/cms/users`

## API endpoints

- `/api/admin/bulk`
- `/api/admin/certificates/[id]/revoke`
- `/api/admin/competencies`
- `/api/admin/courses/[slug]/publish`
- `/api/admin/courses/[slug]`
- `/api/admin/courses`
- `/api/admin/media/upload`
- `/api/admin/publication-schedule`
- `/api/ai/tutor`
- `/api/analytics/event`
- `/api/auth/login`
- `/api/auth/logout`
- `/api/auth/session`
- `/api/billing/checkout`
- `/api/billing/portal`
- `/api/billing/webhook`
- `/api/certificates/[id]/pdf`
- `/api/certificates/issue`
- `/api/certificates/verify/[id]`
- `/api/company/assignments`
- `/api/company/employees`
- `/api/company/invitations/accept`
- `/api/company/invitations`
- `/api/company/modules/[id]`
- `/api/company/modules`
- `/api/company/onboarding/[id]`
- `/api/company/onboarding`
- `/api/company/settings`
- `/api/company/sso`
- `/api/company/state`
- `/api/company/teams`
- `/api/competencies`
- `/api/courses/[slug]`
- `/api/health`
- `/api/learner/goals`
- `/api/learner/notes`
- `/api/learner/notifications`
- `/api/learner/profile`
- `/api/learner/progress`
- `/api/learner/resources`
- `/api/learner/skills`
- `/api/learner/state`
- `/api/media/sign`
- `/api/notifications/send`
- `/api/reports/company`
