docs/v6/ROUTE_MAP.md
# V6 Route Map

## Application routes
- `/`
- `/about`
- `/admin`
- `/admin/activity`
- `/admin/analytics`
- `/admin/announcements`
- `/admin/api-keys`
- `/admin/assessments`
- `/admin/assessments/[id]`
- `/admin/audit`
- `/admin/backups`
- `/admin/branding`
- `/admin/certificates`
- `/admin/cohorts`
- `/admin/community`
- `/admin/companies`
- `/admin/companies/[id]`
- `/admin/company-academies`
- `/admin/competencies`
- `/admin/courses`
- `/admin/courses/[slug]`
- `/admin/credential-templates`
- `/admin/email`
- `/admin/enterprise`
- `/admin/features`
- `/admin/imports`
- `/admin/instructors`
- `/admin/integrations`
- `/admin/interoperability`
- `/admin/jobs`
- `/admin/knowledge`
- `/admin/learners`
- `/admin/learning-paths`
- `/admin/localization`
- `/admin/media`
- `/admin/onboarding`
- `/admin/pages`
- `/admin/plans`
- `/admin/quality`
- `/admin/resources`
- `/admin/revenue`
- `/admin/reviews`
- `/admin/roles`
- `/admin/sales`
- `/admin/scheduled-reports`
- `/admin/seo`
- `/admin/settings`
- `/admin/support`
- `/admin/system`
- `/admin/webhooks`
- `/admin/white-label`
- `/assessment/[slug]`
- `/careers`
- `/certifications`
- `/certifications/verify`
- `/cms`
- `/cms/certificates`
- `/cms/company-content`
- `/cms/courses`
- `/cms/courses/[slug]`
- `/cms/knowledge`
- `/cms/learning-paths`
- `/cms/resources`
- `/cms/settings`
- `/cms/users`
- `/community`
- `/company`
- `/company-academy`
- `/company/academy`
- `/company/academy/[id]`
- `/company/assignments`
- `/company/billing`
- `/company/certificates`
- `/company/cohorts`
- `/company/employees`
- `/company/imports`
- `/company/integrations`
- `/company/onboarding`
- `/company/reports`
- `/company/reports/scheduled`
- `/company/settings`
- `/company/skills`
- `/company/sso`
- `/company/teams`
- `/company/white-label`
- `/contact`
- `/course/[slug]`
- `/courses`
- `/credential/[id]`
- `/dashboard`
- `/dashboard/assignments`
- `/dashboard/career`
- `/dashboard/certificates`
- `/dashboard/cohorts`
- `/dashboard/community`
- `/dashboard/courses`
- `/dashboard/goals`
- `/dashboard/learning-paths`
- `/dashboard/notes`
- `/dashboard/notifications`
- `/dashboard/onboarding`
- `/dashboard/profile`
- `/dashboard/resources`
- `/dashboard/settings`
- `/dashboard/skills`
- `/dashboard/transcript`
- `/dashboard/tutor`
- `/experts`
- `/for-companies`
- `/glossary/[term]`
- `/invite/[token]`
- `/knowledge`
- `/knowledge/[slug]`
- `/learn/[slug]`
- `/learning-paths`
- `/learning-paths/[slug]`
- `/login`
- `/pricing`
- `/resources`
- `/skills-assessment`

## API routes
- `/api/admin/bulk`
- `/api/admin/certificates/[id]/revoke`
- `/api/admin/cohorts`
- `/api/admin/competencies`
- `/api/admin/courses`
- `/api/admin/courses/[slug]`
- `/api/admin/courses/[slug]/publish`
- `/api/admin/interoperability`
- `/api/admin/media/upload`
- `/api/admin/publication-schedule`
- `/api/admin/sales`
- `/api/admin/scheduled-reports`
- `/api/admin/white-label`
- `/api/ai/tutor`
- `/api/analytics/event`
- `/api/auth/login`
- `/api/auth/logout`
- `/api/auth/session`
- `/api/billing/checkout`
- `/api/billing/portal`
- `/api/billing/webhook`
- `/api/certificates/[id]/pdf`
- `/api/certificates/issue`
- `/api/certificates/verify/[id]`
- `/api/company/assignments`
- `/api/company/cohorts`
- `/api/company/employees`
- `/api/company/invitations`
- `/api/company/invitations/accept`
- `/api/company/modules`
- `/api/company/modules/[id]`
- `/api/company/onboarding`
- `/api/company/onboarding/[id]`
- `/api/company/scheduled-reports`
- `/api/company/settings`
- `/api/company/sso`
- `/api/company/state`
- `/api/company/teams`
- `/api/company/white-label`
- `/api/competencies`
- `/api/courses/[slug]`
- `/api/health`
- `/api/learner/goals`
- `/api/learner/notes`
- `/api/learner/notifications`
- `/api/learner/profile`
- `/api/learner/progress`
- `/api/learner/resources`
- `/api/learner/skills`
- `/api/learner/state`
- `/api/media/sign`
- `/api/notifications/send`
- `/api/reports/company`
